reformatting file structure

--- a/weatherwindow.ui
+++ b/weatherwindow.ui
@@ -13,6 +13,16 @@
   <property name="windowTitle">
    <string>Habari | Weather</string>
   </property>
+  <widget class="QLineEdit" name="lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>80</y>
+     <width>113</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
