--- a/weatherwindow.ui
+++ b/weatherwindow.ui
@@ -6,25 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>590</width>
-    <height>466</height>
+    <width>466</width>
+    <height>386</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Habari | Weather</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="3" column="2">
-    <widget class="QLabel" name="dateLabel">
+   <item row="9" column="0">
+    <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="2">
-    <widget class="QLabel" name="DescLabel">
-     <property name="text">
-      <string>TextLabel</string>
+      <string>Wind Speed</string>
      </property>
     </widget>
    </item>
@@ -40,46 +33,74 @@
      </property>
     </widget>
    </item>
+   <item row="0" column="0">
+    <widget class="QPushButton" name="BackButton">
+     <property name="text">
+      <string>Back</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="0" alignment="Qt::AlignLeft">
+    <widget class="QLCDNumber" name="humidity">
+     <property name="styleSheet">
+      <string notr="true">QLCDNumber{
+    color: rgb(255, 89, 242);    
+    background-color: rgb(0, 85, 0);
+}</string>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="0" alignment="Qt::AlignLeft">
+    <widget class="QLCDNumber" name="windSpeed">
+     <property name="styleSheet">
+      <string notr="true">QLCDNumber{
+    color: rgb(255, 89, 242);    
+    background-color: rgb(0, 85, 0);
+}</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QPushButton" name="torontoButton">
+     <property name="text">
+      <string>Toronto, Canada</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Temperature</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
+    <widget class="QPushButton" name="beijingButton">
+     <property name="text">
+      <string>Beijing, China</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QPushButton" name="parisButton">
+     <property name="text">
+      <string>Paris, France</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>Humidity</string>
+     </property>
+    </widget>
+   </item>
    <item row="1" column="1">
     <widget class="QLineEdit" name="searchBar">
      <property name="font">
       <font>
        <family>FreeSans</family>
       </font>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="1">
-    <widget class="QLabel" name="label_4">
-     <property name="text">
-      <string>Description:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="3">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="6" column="2">
-    <widget class="QLabel" name="TempLabel">
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0">
-    <widget class="QPushButton" name="BackButton">
-     <property name="text">
-      <string>Back</string>
      </property>
     </widget>
    </item>
@@ -106,60 +127,21 @@
      </layout>
     </widget>
    </item>
-   <item row="7" column="2">
-    <widget class="QPushButton" name="pushButton_2">
-     <property name="text">
-      <string>Next Day</string>
+   <item row="6" column="0" alignment="Qt::AlignLeft">
+    <widget class="QLCDNumber" name="temp">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="acceptDrops">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLCDNumber{
+    color: rgb(255, 89, 242);    
+    background-color: rgb(0, 85, 0);
+}</string>
      </property>
     </widget>
-   </item>
-   <item row="4" column="1">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Location:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QLabel" name="label_3">
-     <property name="text">
-      <string>Date:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="1">
-    <widget class="QLabel" name="label_5">
-     <property name="text">
-      <string>Temperature</string>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="1">
-    <widget class="QPushButton" name="pushButton">
-     <property name="text">
-      <string>Previous Day</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="2">
-    <widget class="QLabel" name="locationLabel">
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
   <widget class="QWidget" name="horizontalLayoutWidget">
