--- a/weatherwindow.ui
+++ b/weatherwindow.ui
@@ -14,10 +14,24 @@
    <string>Habari | Weather</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="9" column="0">
+   <item row="6" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Wind Speed</string>
+      <string>Description</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QPushButton" name="BackButton">
+     <property name="text">
+      <string>Back</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="1">
+    <widget class="QPushButton" name="prevButton">
+     <property name="text">
+      <string>Previous Day</string>
      </property>
     </widget>
    </item>
@@ -33,65 +47,10 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QPushButton" name="BackButton">
-     <property name="text">
-      <string>Back</string>
-     </property>
-    </widget>
-   </item>
-   <item row="8" column="0" alignment="Qt::AlignLeft">
-    <widget class="QLCDNumber" name="humidity">
-     <property name="styleSheet">
-      <string notr="true">QLCDNumber{
-    color: rgb(255, 89, 242);    
-    background-color: rgb(0, 85, 0);
-}</string>
-     </property>
-    </widget>
-   </item>
-   <item row="10" column="0" alignment="Qt::AlignLeft">
-    <widget class="QLCDNumber" name="windSpeed">
-     <property name="styleSheet">
-      <string notr="true">QLCDNumber{
-    color: rgb(255, 89, 242);    
-    background-color: rgb(0, 85, 0);
-}</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="QPushButton" name="torontoButton">
-     <property name="text">
-      <string>Toronto, Canada</string>
-     </property>
-    </widget>
-   </item>
    <item row="5" column="0">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Temperature</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="1">
-    <widget class="QPushButton" name="beijingButton">
-     <property name="text">
-      <string>Beijing, China</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="1">
-    <widget class="QPushButton" name="parisButton">
-     <property name="text">
-      <string>Paris, France</string>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
-      <string>Humidity</string>
+      <string>Temperature</string>
      </property>
     </widget>
    </item>
@@ -111,23 +70,50 @@
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
-       <widget class="QRadioButton" name="radioButton">
+       <widget class="QRadioButton" name="celcButton">
         <property name="text">
          <string>Celcius</string>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
-       <widget class="QRadioButton" name="radioButton_2">
+       <widget class="QRadioButton" name="farenButton">
         <property name="text">
          <string>Farenheit</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
-   <item row="6" column="0" alignment="Qt::AlignLeft">
+   <item row="8" column="2">
+    <widget class="QPushButton" name="nextButton">
+     <property name="text">
+      <string>Next Day</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Location</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0">
+    <widget class="QLabel" name="label_5">
+     <property name="text">
+      <string>Date</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
     <widget class="QLCDNumber" name="temp">
      <property name="enabled">
       <bool>true</bool>
@@ -140,6 +126,27 @@
     color: rgb(255, 89, 242);    
     background-color: rgb(0, 85, 0);
 }</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QLabel" name="locationLabel">
+     <property name="text">
+      <string> </string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <widget class="QLabel" name="descLabel">
+     <property name="text">
+      <string> </string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="1">
+    <widget class="QLabel" name="dateLabel">
+     <property name="text">
+      <string> </string>
      </property>
     </widget>
    </item>
