--- a/weatherwindow.ui
+++ b/weatherwindow.ui
@@ -33,6 +33,9 @@
      <property name="text">
       <string>Previous Day</string>
      </property>
+     <property name="checkable">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
    <item row="1" column="0">
@@ -132,21 +135,21 @@
    <item row="4" column="1">
     <widget class="QLabel" name="locationLabel">
      <property name="text">
-      <string> </string>
+      <string/>
      </property>
     </widget>
    </item>
    <item row="6" column="1">
     <widget class="QLabel" name="descLabel">
      <property name="text">
-      <string> </string>
+      <string/>
      </property>
     </widget>
    </item>
    <item row="7" column="1">
     <widget class="QLabel" name="dateLabel">
      <property name="text">
-      <string> </string>
+      <string/>
      </property>
     </widget>
    </item>
