--- a/weatherwindow.ui
+++ b/weatherwindow.ui
@@ -153,6 +153,13 @@
      </property>
     </widget>
    </item>
+   <item row="1" column="2">
+    <widget class="QComboBox" name="citiesBox">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
   </layout>
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
