--- a/newswindow.ui
+++ b/newswindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>652</width>
-    <height>302</height>
+    <height>365</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,19 +26,6 @@
     <string>Back</string>
    </property>
   </widget>
-  <widget class="QLabel" name="url1">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>210</y>
-     <width>631</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>URL 1</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="SubmitButton">
    <property name="geometry">
     <rect>
@@ -52,58 +39,6 @@
     <string>Submit</string>
    </property>
   </widget>
-  <widget class="QLabel" name="url2">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>220</y>
-     <width>641</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>URL 2</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="url5">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>270</y>
-     <width>641</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>URL 5</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="url3">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>240</y>
-     <width>641</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>URL 3</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="url4">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>260</y>
-     <width>641</width>
-     <height>10</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>URL 4</string>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="category">
    <property name="geometry">
     <rect>
@@ -114,7 +49,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="label_1">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -124,7 +59,43 @@
     </rect>
    </property>
    <property name="text">
-    <string>Enter search command:</string>
+    <string>Enter news category:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>100</y>
+     <width>150</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Enter source:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="source">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>100</y>
+     <width>113</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>170</y>
+     <width>113</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Clear Results</string>
    </property>
   </widget>
  </widget>
