--- a/weatherwindow.ui
+++ b/weatherwindow.ui
@@ -180,6 +180,56 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="0">
+       <widget class="QLCDNumber" name="temp_1">
+        <property name="styleSheet">
+         <string notr="true">QLCDNumber{
+    color: rgb(255, 89, 242);    
+    background-color: rgb(0, 85, 0);
+}</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLCDNumber" name="temp_2">
+        <property name="styleSheet">
+         <string notr="true">QLCDNumber{
+    color: rgb(255, 89, 242);    
+    background-color: rgb(0, 85, 0);
+}</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QLCDNumber" name="temp_3">
+        <property name="styleSheet">
+         <string notr="true">QLCDNumber{
+    color: rgb(255, 89, 242);    
+    background-color: rgb(0, 85, 0);
+}</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="3">
+       <widget class="QLCDNumber" name="temp_4">
+        <property name="styleSheet">
+         <string notr="true">QLCDNumber{
+    color: rgb(255, 89, 242);    
+    background-color: rgb(0, 85, 0);
+}</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="4">
+       <widget class="QLCDNumber" name="temp_5">
+        <property name="styleSheet">
+         <string notr="true">QLCDNumber{
+    color: rgb(255, 89, 242);    
+    background-color: rgb(0, 85, 0);
+}</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
