Displayed more information about the articles and refresh news UI

--- a/newswindow.ui
+++ b/newswindow.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>652</width>
-    <height>365</height>
+    <width>650</width>
+    <height>500</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>650</width>
+    <height>500</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>650</width>
+    <height>500</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -16,7 +28,7 @@
   <widget class="QPushButton" name="BackButton">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>4</x>
      <y>10</y>
      <width>72</width>
      <height>32</height>
@@ -30,9 +42,9 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>90</y>
+     <y>85</y>
      <width>113</width>
-     <height>30</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -58,6 +70,12 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="whatsThis">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;Enter word(s):&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 15pt &quot;.SF NS Text&quot;;font-style:italic;</string>
+   </property>
    <property name="text">
     <string>Enter word(s):</string>
    </property>
@@ -70,6 +88,9 @@
      <width>121</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 15pt &quot;.SF NS Text&quot;;font-style:italic;</string>
    </property>
    <property name="text">
     <string>Choose a topic:</string>
@@ -163,6 +184,54 @@
    </property>
    <property name="text">
     <string>Search by topic:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="resultsTitle_3">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>200</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 18pt &quot;.SF NS Text&quot;;border-bottom-width: 1px; border-bottom-style: solid; border-radius: 0px;font-weight: bold;</string>
+   </property>
+   <property name="text">
+    <string>Article</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="resultsTitle_2">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>200</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 18pt &quot;.SF NS Text&quot;;border-bottom-width: 1px; border-bottom-style: solid; border-radius: 0px;font-weight: bold;</string>
+   </property>
+   <property name="text">
+    <string>Author</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="resultsTitle">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>200</y>
+     <width>121</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 18pt &quot;.SF NS Text&quot;;border-bottom-width: 1px; border-bottom-style: solid; border-radius: 0px;font-weight: bold;</string>
+   </property>
+   <property name="text">
+    <string>News Source</string>
    </property>
   </widget>
  </widget>
